; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/microchip/extr_ksz9477.c_ksz9477_read_table.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/microchip/extr_ksz9477.c_ksz9477_read_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ksz_device = type { i32 }

@REG_SW_ALU_VAL_A = common dso_local global i32 0, align 4
@REG_SW_ALU_VAL_B = common dso_local global i32 0, align 4
@REG_SW_ALU_VAL_C = common dso_local global i32 0, align 4
@REG_SW_ALU_VAL_D = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ksz_device*, i32*)* @ksz9477_read_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ksz9477_read_table(%struct.ksz_device* %0, i32* %1) #0 {
  %3 = alloca %struct.ksz_device*, align 8
  %4 = alloca i32*, align 8
  store %struct.ksz_device* %0, %struct.ksz_device** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.ksz_device*, %struct.ksz_device** %3, align 8
  %6 = load i32, i32* @REG_SW_ALU_VAL_A, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 0
  %9 = call i32 @ksz_read32(%struct.ksz_device* %5, i32 %6, i32* %8)
  %10 = load %struct.ksz_device*, %struct.ksz_device** %3, align 8
  %11 = load i32, i32* @REG_SW_ALU_VAL_B, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 1
  %14 = call i32 @ksz_read32(%struct.ksz_device* %10, i32 %11, i32* %13)
  %15 = load %struct.ksz_device*, %struct.ksz_device** %3, align 8
  %16 = load i32, i32* @REG_SW_ALU_VAL_C, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 2
  %19 = call i32 @ksz_read32(%struct.ksz_device* %15, i32 %16, i32* %18)
  %20 = load %struct.ksz_device*, %struct.ksz_device** %3, align 8
  %21 = load i32, i32* @REG_SW_ALU_VAL_D, align 4
  %22 = load i32*, i32** %4, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 3
  %24 = call i32 @ksz_read32(%struct.ksz_device* %20, i32 %21, i32* %23)
  ret void
}

declare dso_local i32 @ksz_read32(%struct.ksz_device*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
